--- a/mid_century_modern_blog/mid_century_modern_blog/index.html
+++ b/mid_century_modern_blog/mid_century_modern_blog/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>mid-century modern | blog</title>
 <!-- link css stylesheet here -->
+ <link rel="stylesheet" href="css/style.css"> 
 <!-- find  lato and josephin sans font links in google fonts and insert links here-->
 </head>
 
@@ -28,10 +29,10 @@
       <article>
         <h3>02/14/2024</h3>
         <h2>a visual guide to mid-century modern style</h2>
-        <img src="images/kauffmanHouse.png" alt="">
-        <!-- make images work and add alt text -->
+        <img src="img/kauffmanHouse.png" alt="Modernist house with glass walls and flat roof, surrounded by lush green palms. A large, tranquil swimming pool reflects the golden sunlight.">
+        <!-- make imgs work and add alt text -->
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius soluta incidunt, eum quos consequuntur aliquam nobis velit mollitia iste, natus ex repellendus delectus quisquam et quae, in atque a. Perspiciatis excepturi ipsum temporibus, eius odit deleniti quasi voluptates eaque aliquam, iste consequatur repudiandae illo a. Voluptates eligendi reiciendis corporis itaque soluta fugit atque quaerat ipsum reprehenderit sapiente, voluptatem repellat eveniet fuga natus tempore modi vero distinctio nulla accusantium recusandae, omnis. Esse aliquam ea, similique repudiandae nihil numquam, neque enim perspiciatis. Facilis dolor praesentium impedit quidem, non unde accusantium, commodi error, soluta dolores modi blanditiis similique amet hic earum, reiciendis consectetur animi in. Exercitationem distinctio necessitatibus molestias quas laboriosam nam modi porro accusantium blanditiis, beatae incidunt aliquid nostrum laborum, magni cum recusandae autem doloremque qui perferendis iste non quaerat fugit. Aspernatur voluptatem impedit, enim!</p>
-        <img src="images/eamesChair.png" alt="">
+        <img src="img/eamesChair.png" alt="Mid-century modern room featuring a red lounge chair and ottoman, wooden side table with books, vase with branches, and a large round pendant light.">
           <!-- make images work and add alt text -->
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius soluta incidunt, eum quos consequuntur aliquam nobis velit mollitia iste, natus ex repellendus delectus quisquam et quae, in atque a. Perspiciatis excepturi ipsum temporibus, eius odit deleniti quasi voluptates eaque aliquam, iste consequatur repudiandae illo a. Voluptates eligendi reiciendis corporis itaque soluta fugit atque quaerat ipsum reprehenderit sapiente, voluptatem repellat eveniet fuga natus tempore modi vero distinctio nulla accusantium recusandae, omnis. Esse aliquam ea, similique repudiandae nihil numquam, neque enim perspiciatis. Facilis dolor praesentium impedit quidem, non unde accusantium, commodi error, soluta dolores modi blanditiis similique amet hic earum, reiciendis consectetur animi in. Exercitationem distinctio necessitatibus molestias quas laboriosam nam modi porro accusantium blanditiis, beatae incidunt aliquid nostrum laborum, magni cum recusandae autem doloremque qui perferendis iste non quaerat fugit. Aspernatur voluptatem impedit, enim!</p>
       </article>
@@ -40,9 +41,9 @@
   <aside>
     <h3>About Us</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum fugiat illo sunt quasi incidunt veniam cumque minus totam rem ea vel ut eius, accusamus, doloribus dolore at ipsum quaerat molestias.Explicabo consectetur tempora perferendis voluptas itaque, corporis at ipsum quisquam eveniet, facilis perspiciatis. Eum ad adipisci, earum fugit perspiciatis deserunt veniam eos? Impedit expedita assumenda, saepe excepturi ad voluptatibus. Eveniet.</p>
-    <img src="images/slimAarons.png" alt="">
-    <img src="images/orangeText.png" alt="">
-    <img src="img/calderMobile.jpg" alt="">
+    <img src="img/slimAarons.png" alt="Two women in bright dresses relax on loungers by a luxurious pool. A mid-century modern house and mountains are in the background, with a calm, sunny atmosphere.">
+    <img src="img/orangeText.png" alt="Orange letters and numbers arranged in a dense, repetitive pattern on a cream background, creating an abstract, typographic texture.">
+    <img src="img/calderMobile.jpg" alt="Abstract artwork by Calder depicting colorful geometric shapes suspended in a mobile-like arrangement. Red, blue, yellow, and black shapes float on a cream background, evoking a playful and dynamic tone.">
       <!-- make images work and add alt text -->
       <!-- hint - if these images are meant to be smaller, how do we address only these three? -->
     <h3>Recent Issues</h3>
